--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-mfb-google-icons",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React component for a material floating button (Like seen on: Inbox, Evernote)",
   "author": "Adrian Hartanto",
   "contributors": [],
@@ -27,7 +27,7 @@
     "classnames": "^1.2.0"
   },
   "peerDependencies": {
-    "react": "~0.13.0"
+    "react": "^15.2.1"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
